--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChatGPT-X</title>
+    <!-- BOOTSTRAP CSS LINK START -->
+    <link rel="stylesheet" href="common/css/bootstrap.min.css" />
+    <!-- BOOTSTRAP CSS LINK END -->
+
+    <!-- BOOTSTRAP JS LINK START -->
+    <script src="common/js/bootstrap.bundle.min.js"></script>
+    <!-- BOOTSTRAP JS LINK END -->
 </head>
 <body>
     
