--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <!-- ANIMATE CSS LINK START -->
     <link rel="stylesheet" href="common/css/animate.min.css" />
     <!-- ANIMATE CSS LINK END -->
-    
+
+    <!-- SWEET ALERT JS LINK START -->
+    <script src="common//js/sweetalert.min.js"></script>
+    <!-- SWEET ALERT JS LINK END -->
     <title>ChatGPT-X</title>
 </head>
 <body>
