Add jquery successfully.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- SWEET ALERT JS LINK START -->
     <script src="common//js/sweetalert.min.js"></script>
     <!-- SWEET ALERT JS LINK END -->
+
+    <!-- JQUERY LINK START -->
+    <script src="common/js/jquery.min.js"></script>
+    <!-- JQUERY LINK END -->
     <title>ChatGPT-X</title>
 </head>
 <body>
