--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <!-- JQUERY LINK START -->
     <script src="common/js/jquery.min.js"></script>
     <!-- JQUERY LINK END -->
+
+    <!--FONT AWESOME LINK START -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <!--FONT AWESOME LINK END -->
     <title>ChatGPT-X</title>
 </head>
 <body>
