Add google fonts successfully.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <!--FONT AWESOME LINK START -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!--FONT AWESOME LINK END -->
+
+    <!--   GOOGLE FONT START -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
+    <!--   GOOGLE FONT END -->
     <title>ChatGPT-X</title>
 </head>
 <body>
