Add externl css successfully.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
     <!--   GOOGLE FONT END -->
+
+    <!-- CSS FILE LINK START -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- CSS FILE LINK END -->
     <title>ChatGPT-X</title>
 </head>
 <body>
