--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
     <title>ChatGPT-X</title>
 </head>
 <body>
-    <div class="container-fluid bg-danger">
-    
+    <div class="container-fluid">
+        <div class="row bg-dark">
+            <div class="col-12 d-flex justify-content-center">
+                <a href="#">Intoducing Chat GPT Research Release</a>
+                <a href="#">Try</a>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
     </div>
 </body>
 <!-- JS FILE LINK START -->
