ChatGPT-X page - Header added successfully.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!--   GOOGLE FONT START -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <!--   GOOGLE FONT END -->
 
     <!-- CSS FILE LINK START -->
@@ -41,11 +42,11 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row bg-dark">
+        <div class="row bg-dark top-header">
             <div class="col-12 d-flex justify-content-center">
-                <a href="#">Intoducing Chat GPT Research Release</a>
-                <a href="#">Try</a>
-                <a href="#">Learn More</a>
+                <a href="#" class="text-decoration-none mx-2">Intoducing Chat GPT Research Release</a>
+                <a href="#" class="text-decoration-none mx-2">Try</a>
+                <a href="#" class="text-decoration-none mx-2">Learn More</a>
             </div>
         </div>
     </div>
