ChatGPT-X page - Navbar code processing...

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </head>
 <body>
     <div class="container-fluid">
+        <!-- Head start -->
         <div class="row bg-dark top-header">
             <div class="col-12 d-flex justify-content-center">
                 <a href="#" class="text-decoration-none mx-2">Intoducing Chat GPT Research Release</a>
@@ -49,6 +50,18 @@
                 <a href="#" class="text-decoration-none mx-2">Learn More</a>
             </div>
         </div>
+        <!-- Head edn -->
+
+        <!-- NAVBAR CODE START -->
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-sm">
+                    
+                </nav>
+            </div>
+        </div>
+        <!-- NAVBAR CODE END -->
+
     </div>
 </body>
 <!-- JS FILE LINK START -->
