ChatGPT-X page - Navbar code fixed.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid">
         <!-- Head start -->
         <div class="row bg-dark top-header">
-            <div class="col-12 d-flex justify-content-center">
+            <div class="col-md-12 d-flex justify-content-center">
                 <a href="#" class="text-decoration-none mx-2">Intoducing Chat GPT Research Release</a>
                 <a href="#" class="text-decoration-none mx-2">Try</a>
                 <a href="#" class="text-decoration-none mx-2">Learn More</a>
@@ -52,15 +52,50 @@
         </div>
         <!-- Head edn -->
 
-        <!-- NAVBAR CODE START -->
-        <div class="row">
-            <div class="col-12">
+        <div class="row container-box">
+            <!-- NAVBAR CODE START -->
+            <div class="col-md-12">
                 <nav class="navbar navbar-expand-sm">
-                    
+                    <div class="container-fluid">
+                        <a href="#" class="navbar-brand">
+                            <img src="Images/1600px-OpenAI_logo.png" width="40" alt="OpenAI" srcset="">
+                        OpenAI</a>
+                        <button class="navbar-toggler">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item"><a href="#" class="nav-link">Api</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Research</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
+            <!-- NAVBAR CODE END -->
+            <div class="col-md-6 p-4">
+            <h1>
+                ChatGPT: Optimizing <br>
+                Language Models <br>
+                for Dialogue
+            </h1>
+            <br><br>
+            <h4>
+                We've trained a model called ChatGPT which <br>
+                interacts in a conversational way. The Dialogue <br>
+                format makes it possible for ChatGPT to answer <br>
+                followup questions, admit its mistakes, challenge <br>
+                incorrect premises, and reject inappropriate requests. <br>
+                ChatGPT is a sibling model to InstructGPT,which is trained to followup
+                an instruction in a prompt and provide a detailed response. <br>
+            </h4>
+            <br>
+            <button class="btn">Try ChatGPT<i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="col-md-6">
+                <img src="Images/chatgpt.jpg" class="w-100" alt="">
+            </div>
         </div>
-        <!-- NAVBAR CODE END -->
 
     </div>
 </body>
