--- a/welcome.html
+++ b/welcome.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- BOOTSTRAP CSS LINK START -->
+    <link rel="stylesheet" href="common/css/bootstrap.min.css" />
+    <!-- BOOTSTRAP CSS LINK END -->
+    
+    <!-- BOOTSTRAP JS LINK START -->
+    <script src="common/js/bootstrap.bundle.min.js"></script>
+    <!-- BOOTSTRAP JS LINK END -->
+
+    <!-- ANIMATE CSS LINK START -->
+    <link rel="stylesheet" href="common/css/animate.min.css" />
+    <!-- ANIMATE CSS LINK END -->
+
+    <!-- SWEET ALERT JS LINK START -->
+    <script src="common//js/sweetalert.min.js"></script>
+    <!-- SWEET ALERT JS LINK END -->
+
+    <!-- JQUERY LINK START -->
+    <script src="common/js/jquery.min.js"></script>
+    <!-- JQUERY LINK END -->
+
+    <!--FONT AWESOME LINK START -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <!--FONT AWESOME LINK END -->
+
+    <!--   GOOGLE FONT START -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+    <!--   GOOGLE FONT END -->
+
     <title>Wel Come</title>
 </head>
 <body>
