Welcome page - add chatgpt logo successfully.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                 an instruction in a prompt and provide a detailed response. <br>
             </h4>
             <br>
-            <button class="btn">Try ChatGPT<i class="fa-solid fa-arrow-right"></i></button>
+            <button class="btn">
+                <a href="welcome.html" style="color: #fff !important;" class="text-decoration-none ">
+                    Try ChatGPT
+                </a><i style="color: #fff;" class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="col-md-6">
                 <img src="Images/chatgpt.jpg" class="w-100" alt="">
