--- a/welcome.html
+++ b/welcome.html
@@ -38,6 +38,8 @@
     <title>Wel Come</title>
 </head>
 <body>
-    
+    <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
+        <img src="Images/1600px-OpenAI_logo.png" width="95" alt="">
+    </div>
 </body>
 </html>
