--- a/welcome.html
+++ b/welcome.html
@@ -35,11 +35,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <!--   GOOGLE FONT END -->
 
+     <!-- CSS FILE LINK START -->
+     <link rel="stylesheet" href="css/welcome.css">
+     <!-- CSS FILE LINK END -->
+
     <title>Wel Come</title>
 </head>
 <body>
-    <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
-        <img src="Images/1600px-OpenAI_logo.png" width="95" alt="">
+    <div class="container-fluid vh-100 d-flex flex-column justify-content-center align-items-center">
+        <img src="Images/1600px-OpenAI_logo.png" width="100" alt="">
+        <p>Wel Come to ChatGPT</p>
+        <p> Log in with your OpenAI account to Continue.</p>
+        <div class="sumbit-btn">
+            <a href="#" class="btn login-btn Audiowide">Login</a>
+            <a href="#" class="btn signup-btn Audiowide">Signup</a>
+        </div>
     </div>
 </body>
 </html>
