Create a page login.html to user login.

--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- BOOTSTRAP CSS LINK START -->
     <link rel="stylesheet" href="common/css/bootstrap.min.css" />
     <!-- BOOTSTRAP CSS LINK END -->
@@ -34,22 +33,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <!--   GOOGLE FONT END -->
-
-     <!-- CSS FILE LINK START -->
-     <link rel="stylesheet" href="css/welcome.css">
-     <!-- CSS FILE LINK END -->
-
-    <title>Wel Come</title>
+    <title>Login</title>
 </head>
 <body>
-    <div class="container-fluid vh-100 d-flex flex-column justify-content-center align-items-center">
-        <img src="Images/1600px-OpenAI_logo.png" width="100" alt="">
-        <p>Wel Come to ChatGPT</p>
-        <p> Log in with your OpenAI account to Continue.</p>
-        <div class="sumbit-btn">
-            <a href="login.html" class="btn login-btn Audiowide">Login</a>
-            <a href="#" class="btn signup-btn Audiowide">Signup</a>
-        </div>
-    </div>
+    
 </body>
 </html>
