Login page - Code processing...

--- a/login.html
+++ b/login.html
@@ -36,6 +36,16 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div align="center">
+                    <img src="Images/1600px-OpenAI_logo.png" width="100" alt="">
+                </div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
 </body>
 </html>
