Login page - Create  button and signup

--- a/login.html
+++ b/login.html
@@ -46,6 +46,12 @@
             border-radius: 5px;
             font-family: 'Audiowide', sans-serif;
         }
+        .form-control{
+            outline: none;
+            border: 1px solid #ccc !important;
+            padding: 10px !important;
+            box-shadow: none !important;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +67,9 @@
                         <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
                         <button class="login-btn">Login</button>
                     </form>
+                    <div class="mt-4">
+                        <span>Already have an Account? Log in <a href="#" style="color: #12ac83;">Sign up</a></span>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4"></div>
