Login page - Add two buttons - continue with google and microsoft code processing.....

--- a/login.html
+++ b/login.html
@@ -67,9 +67,14 @@
                         <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
                         <button class="login-btn">Login</button>
                     </form>
-                    <div class="mt-4">
+                    <div class="mt-4 mb-3">
                         <span>Already have an Account? Log in <a href="#" style="color: #12ac83;">Sign up</a></span>
                     </div>
+                    <span class="mb-3">
+                        -----------------------------------OR----------------------------------------
+                    </span>
+                    <button class="btn"></button>
+                    <button class="btn"></button>
                 </div>
             </div>
             <div class="col-md-4"></div>
