--- a/login.html
+++ b/login.html
@@ -73,9 +73,9 @@
                     <span class="mb-3">
                         -----------------------------------OR----------------------------------------
                     </span>
-                    <button class="btn"></button>
-                    <button class="btn"></button>
                 </div>
+                <button class="mt-3 mb-3 btn border p-2"><img src="Images/2991148.png" width="30" alt=""> Continue with Google</button>
+                <button class="mb-3 btn border p-2"> <img src="Images/microsoft-icon-png-5a3a1e100d4d41.59651498151375822405453184.jpg" width="30" alt=""> Continue with Microsift</button>
             </div>
             <div class="col-md-4"></div>
         </div>
