signup page - code edited.

--- a/login.html
+++ b/login.html
@@ -68,7 +68,7 @@
                         <button class="login-btn">Login</button>
                     </form>
                     <div class="mt-4 mb-3">
-                        <span>Already have an Account? Log in <a href="#" style="color: #12ac83;">Sign up</a></span>
+                        <span>Already have an Account? Log in <a href="signup.html" style="color: #12ac83;">Sign up</a></span>
                     </div>
                     <span class="mb-3">
                         -----------------------------------OR----------------------------------------
