--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <!--   GOOGLE FONT END -->
-    <title>Login</title>
+    <title>Signup</title>
     <style>
         .login-btn{
             width: 100%;
@@ -61,14 +61,14 @@
             <div class="col-md-4 d-flex flex-column">
                 <div align="center" class="mt-5">
                     <img src="Images/1600px-OpenAI_logo.png" width="110" alt="">
-                    <h2 class="text-center mt-2">Welcome Back</h2>
+                    <h2 class="text-center mt-2">Create New Account</h2>
                     <form>
                         <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
-                        <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
-                        <button class="login-btn">Login</button>
+                        <input type="password" name="" placeholder="Set Login Password" id="" class="form-control mb-3">
+                        <button class="login-btn">Signup</button>
                     </form>
                     <div class="mt-4 mb-3">
-                        <span>Already have an Account? Log in <a href="#" style="color: #12ac83;">Sign up</a></span>
+                        <span>Already have an Account? Sign up <a href="login.html" style="color: #12ac83;">Login</a></span>
                     </div>
                     <span class="mb-3">
                         -----------------------------------OR----------------------------------------
