--- a/signup.html
+++ b/signup.html
@@ -62,6 +62,7 @@
                 <div align="center" class="mt-5">
                     <img src="Images/1600px-OpenAI_logo.png" width="110" alt="">
                     <h2 class="text-center mt-2">Create New Account</h2>
+                    <!-- form -->
                     <form>
                         <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
                         <input type="password" name="" placeholder="Set Login Password" id="" class="form-control mb-3">
