--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
                     <!-- form -->
                     <form>
                         <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
-                        <input type="password" name="" placeholder="Set Login Password" id="" class="form-control mb-3">
+                        <input type="password" name="" id="" placeholder="Set Login Password" class="form-control mb-3">
                         <button class="login-btn">Signup</button>
                     </form>
                     <div class="mt-4 mb-3">
@@ -82,4 +82,5 @@
         </div>
     </div>
 </body>
+<script src="js/signup.js"></script>
 </html>
