--- a/signup.html
+++ b/signup.html
@@ -66,8 +66,12 @@
                     <form>
                         <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
                         <input type="password" name="" id="" placeholder="Set Login Password" class="form-control mb-3">
-                        <button class="login-btn">Signup</button>
+                        <button class="login-btn mb-2">Signup</button>
                     </form>
+                    <!-- For otp -->
+                        <input type="text" name="" id="" placeholder="Enter OTP" class="form-control d-none mb-3">
+                        <button class="verify-btn d-none">Verify </button>
+
                     <div class="mt-4 mb-3">
                         <span>Already have an Account? Sign up <a href="login.html" style="color: #12ac83;">Login</a></span>
                     </div>
