signup page - signup.js - check input field empty or not.

--- a/signup.html
+++ b/signup.html
@@ -63,9 +63,9 @@
                     <img src="Images/1600px-OpenAI_logo.png" width="110" alt="">
                     <h2 class="text-center mt-2">Create New Account</h2>
                     <!-- form -->
-                    <form>
-                        <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
-                        <input type="password" name="" id="" placeholder="Set Login Password" class="form-control mb-3">
+                    <form class="signup-form">
+                        <input type="text" name="" id="" placeholder="Email Address" class="form-control email mb-3">
+                        <input type="password" name="" id="" placeholder="Set Login Password" class="form-control password mb-3">
                         <button class="login-btn mb-2">Signup</button>
                     </form>
                     <!-- For otp -->
