--- a/signup.html
+++ b/signup.html
@@ -64,8 +64,8 @@
                     <h2 class="text-center mt-2">Create New Account</h2>
                     <!-- form -->
                     <form class="signup-form">
-                        <input type="email" name="" id="" placeholder="Email Address" class="form-control email mb-3">
-                        <input type="password" name="" id="" placeholder="Set Login Password" class="form-control password mb-3">
+                        <input type="email" placeholder="Email Address" class="form-control email mb-3">
+                        <input type="password" placeholder="Set Login Password" class="form-control password mb-3">
                         <button class="login-btn mb-2">Signup</button>
                     </form>
                     <!-- For otp -->
