signup page - signup.php - add before send

--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
     <!--   GOOGLE FONT END -->
     <title>Signup</title>
     <style>
-        .login-btn{
+        .signup-btn{
             width: 100%;
             color: #fff;
             background-color: #12ac83;
@@ -66,7 +66,7 @@
                     <form class="signup-form">
                         <input type="email" placeholder="Email Address" class="form-control email mb-3">
                         <input type="password" placeholder="Set Login Password" class="form-control password mb-3">
-                        <button class="login-btn mb-2">Signup</button>
+                        <button class="signup-btn mb-2">Signup</button>
                     </form>
                     <!-- For otp -->
                         <input type="text" name="" id="" placeholder="Enter OTP" class="form-control d-none mb-3">
