signup page - verify button showing successfully.

--- a/signup.html
+++ b/signup.html
@@ -46,6 +46,17 @@
             border-radius: 5px;
             font-family: 'Audiowide', sans-serif;
         }
+        .verify-btn{
+            width: 100%;
+            color: #fff;
+            background-color: #12ac83;
+            box-shadow: none;
+            border: none;
+            padding: 8px;
+            font-size: 18px;
+            border-radius: 5px;
+            font-family: 'Audiowide', sans-serif;
+        }
         .form-control{
             outline: none;
             border: 1px solid #ccc !important;
@@ -69,7 +80,7 @@
                         <button class="signup-btn mb-2">Signup</button>
                     </form>
                     <!-- For otp -->
-                        <input type="text" name="" id="" placeholder="Enter OTP" class="form-control d-none mb-3">
+                        <input type="text" name="" id="" placeholder="Enter OTP" class="form-control otp d-none mb-3">
                         <button class="verify-btn d-none">Verify </button>
 
                     <div class="mt-4 mb-3">
