--- a/welcome.html
+++ b/welcome.html
@@ -48,7 +48,7 @@
         <p> Log in with your OpenAI account to Continue.</p>
         <div class="sumbit-btn">
             <a href="login.html" class="btn login-btn Audiowide">Login</a>
-            <a href="#" class="btn signup-btn Audiowide">Signup</a>
+            <a href="signup.html" class="btn signup-btn Audiowide">Signup</a>
         </div>
     </div>
 </body>
