--- a/login.html
+++ b/login.html
@@ -67,6 +67,9 @@
                         <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
                         <button class="login-btn">Login</button>
                     </form>
+                    <!-- For otp -->
+                    <input type="text" name="" id="" placeholder="Enter OTP" class="form-control otp d-none mb-3">
+                    <button class="verify-btn d-none">Verify </button>
                     <div class="mt-4 mb-3">
                         <span>Already have an Account? Log in <a href="signup.html" style="color: #12ac83;">Sign up</a></span>
                     </div>
