Login page - add a input field for otp and and a button for verify for whom user dont verified.

--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
                         <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
                         <button class="login-btn">Login</button>
                     </form>
-                    <!-- For otp -->
+                    <!-- For otp verification -->
                     <input type="text" name="" id="" placeholder="Enter OTP" class="form-control otp d-none mb-3">
                     <button class="verify-btn d-none">Verify </button>
                     <div class="mt-4 mb-3">
