Login page - create a js file login.js to excute page.

--- a/login.html
+++ b/login.html
@@ -46,6 +46,17 @@
             border-radius: 5px;
             font-family: 'Audiowide', sans-serif;
         }
+        .verify-btn{
+            width: 100%;
+            color: #fff;
+            background-color: #12ac83;
+            box-shadow: none;
+            border: none;
+            padding: 8px;
+            font-size: 18px;
+            border-radius: 5px;
+            font-family: 'Audiowide', sans-serif;
+        }
         .form-control{
             outline: none;
             border: 1px solid #ccc !important;
@@ -84,4 +95,5 @@
         </div>
     </div>
 </body>
+<script src="js/login.js"></script>
 </html>
