--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
                 <div align="center" class="mt-5">
                     <img src="Images/1600px-OpenAI_logo.png" width="110" alt="">
                     <h2 class="text-center mt-2">Welcome Back</h2>
-                    <form>
+                    <form class="login-form">
                         <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
                         <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
                         <button class="login-btn">Login</button>
