--- a/login.html
+++ b/login.html
@@ -74,9 +74,9 @@
                     <img src="Images/1600px-OpenAI_logo.png" width="110" alt="">
                     <h2 class="text-center mt-2">Welcome Back</h2>
                     <form class="login-form">
-                        <input type="text" name="" id="" placeholder="Email Address" class="form-control mb-3">
-                        <input type="password" name="" placeholder="Password" id="" class="form-control mb-3">
-                        <button class="login-btn">Login</button>
+                        <input type="text" name="" id="" placeholder="Email Address" class="form-control email mb-3">
+                        <input type="password" name="" placeholder="Password" id="" class="form-control password mb-3">
+                        <button class="login-btn btn-login">Login</button>
                     </form>
                     <!-- For otp verification -->
                     <input type="text" name="" id="" placeholder="Enter OTP" class="form-control otp d-none mb-3">
