ChatGPT page - add user.css file.

--- a/user.html
+++ b/user.html
@@ -31,10 +31,17 @@
     <!--   GOOGLE FONT START -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="user.css">
     <title>ChatGPT</title>
 </head>
 <body>
-    
+    <div class="left-box">
+
+    </div>
+    <div class="right-box"></div>
+
+
 </body>
 </html>
