ChatGPT page - Added new chat successfully.

--- a/user.html
+++ b/user.html
@@ -33,12 +33,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="user.css">
+    <link rel="stylesheet" href="css/user.css">
     <title>ChatGPT</title>
 </head>
 <body>
     <div class="left-box">
-
+        <div>
+            <ul class="list-group">
+                <li class="list-group-item bg-transparent text-white mb-2" style="border: 0.6px solid #777575 !important"><i class="fa fa-plus"></i> New Chat</li>
+            </ul>
+        </div>
     </div>
     <div class="right-box"></div>
 
