ChatGPT page - UI processing........

--- a/user.html
+++ b/user.html
@@ -40,7 +40,7 @@
     <div class="left-box">
         <div>
             <ul class="list-group">
-                <li class="list-group-item bg-transparent text-white mb-2" style="border: 0.6px solid #777575 !important"><i class="fa fa-plus"></i> New Chat</li>
+                <li class="list-group-item bg-transparent text-white mb-2" style="border: 0.6px solid #777575 !important; cursor: pointer;"><i class="fa fa-plus"></i> New Chat</li>
             </ul>
         </div>
     </div>
