ChatGPT page - add OPENAI Discord and Update&FAQ successfully.

--- a/user.html
+++ b/user.html
@@ -53,6 +53,12 @@
           <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
             <i class="fa-regular fa-moon"></i> Dark Mood
           </li>
+          <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
+            <i class="fa-brands fa-discord"></i> OpenAI Discord
+          </li>
+          <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
+            <i class="fa-solid fa-arrow-up-right-from-square"></i> Update & FAQ
+          </li>
         </ul>
       </div>
     </div>
