ChatGPT page - add LOGOUT button successfully.

--- a/user.html
+++ b/user.html
@@ -59,6 +59,9 @@
           <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
             <i class="fa-solid fa-arrow-up-right-from-square"></i> Update & FAQ
           </li>
+          <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
+          </li>
         </ul>
       </div>
     </div>
