ChatGPT page - side nav code fixed.

--- a/user.html
+++ b/user.html
@@ -46,7 +46,7 @@
         </ul>
       </div>
       <div>
-        <ul class="list-group">
+        <ul class="list-group" style="border-top: 0.6px solid #777575 !important; border-radius: 0;">
           <li class="list-group-item bg-transparent text-white mb-2" style="cursor: pointer">
             <i class="fa-solid fa-trash-can"></i> Clear Conversations
           </li>
