ChatGPT page - Main page code processing...

--- a/user.html
+++ b/user.html
@@ -65,6 +65,10 @@
         </ul>
       </div>
     </div>
-    <div class="right-box"></div>
+    <!-- MAIN PAGE CODE SATRT -->
+    <div class="right-box">
+        
+    </div>
+    <!-- MAIN PAGE CODE END -->
   </body>
 </html>
