ChatGPT page - Add example, capabilities and Limitations successfully.

--- a/user.html
+++ b/user.html
@@ -67,7 +67,28 @@
     </div>
     <!-- MAIN PAGE CODE SATRT -->
     <div class="right-box">
-        
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-8">
+                <h1 class="text-center mt-5 mb-5">ChatGPT</h1>
+                
+                <div class="row">
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <i class="fa-regular fa-sun mb-3"></i>
+                        <h5>Example</h5>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <i class="fa-solid fa-bolt mb-3"></i>
+                        <h5>Capabilities</h5>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
+                        <i class="fa-solid fa-triangle-exclamation mb-3"></i>
+                        <h5>Limitations</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
     </div>
     <!-- MAIN PAGE CODE END -->
   </body>
