ChatGPT page - Add 3 text box successfully.

--- a/user.html
+++ b/user.html
@@ -68,11 +68,11 @@
     <!-- MAIN PAGE CODE SATRT -->
     <div class="right-box">
         <div class="row">
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h1 class="text-center mt-5 mb-5">ChatGPT</h1>
                 
-                <div class="row">
+                <div class="row mb-3">
                     <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
                         <i class="fa-regular fa-sun mb-3"></i>
                         <h5>Example</h5>
@@ -86,8 +86,20 @@
                         <h5>Limitations</h5>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-md-4 text-box ex-box">
+                        <p>"Explain quantum computing in simple terms"-></p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>Remembers what user said earlier in the conversation</p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>May occasionally generate incorrect information</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <!-- MAIN PAGE CODE END -->
