--- a/user.html
+++ b/user.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row mb-3">
                     <div class="col-md-4 text-box ex-box">
                         <p>"Explain quantum computing in simple terms"-></p>
                     </div>
@@ -97,6 +97,34 @@
                     <div class="col-md-4 text-box">
                         <p>May occasionally generate incorrect information</p>
                     </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-md-4 text-box ex-box">
+                        <p>"Got any creative ideas for a 10 year old’s birthday?"-></p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>Allows user to provide follow-up corrections</p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>May occasionally produce harmful instructions or biased content</p>
+                    </div>
+                </div>
+
+                <div class="row mb-5">
+                    <div class="col-md-4 text-box ex-box">
+                        <p>"How do I make an HTTP request in Javascript?"-></p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>Trained to decline inappropriate requests</p>
+                    </div>
+                    <div class="col-md-4 text-box">
+                        <p>Limited knowledge of world and events after 2021</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    .col-md-
                 </div>
             </div>
             <div class="col-md-2"></div>
