--- a/user.html
+++ b/user.html
@@ -124,7 +124,10 @@
                 </div>
 
                 <div class="row">
-                    .col-md-
+                    <div class="col-md-12">
+                        <input type="text" class="form-control">
+                        <i class="fa-regular fa-paper"></i>
+                    </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
