--- a/user.html
+++ b/user.html
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <input type="text" class="form-control">
-                        <i class="fa-regular fa-paper"></i>
+                        <i class="fa-regular fa-paper-plane send-btn" style="position: absolute; right: 10px; top: 10px; color: #444;"></i>
                     </div>
                 </div>
             </div>
