ChatGPT page - UI design completed.

--- a/user.html
+++ b/user.html
@@ -123,12 +123,17 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <input type="text" class="form-control">
-                        <i class="fa-regular fa-paper-plane send-btn" style="position: absolute; right: 10px; top: 10px; color: #444;"></i>
+                <div class="row mb-3">
+                    <div class="col-md-12 icon-area position-relative">
+                        <input type="text" class="form-control shadow-sm ">
+                        <i class="fa-regular fa-paper-plane send-btn"></i>
                     </div>
                 </div>
+                
+                <small>
+                    <a href="#">ChatGPT Mar 14 Version.</a> Free Research Preview. Our goal is to make AI systems more natural and safe to interact with. Your feedback will help us improve.
+                </small>
+
             </div>
             <div class="col-md-2"></div>
         </div>
