--- a/dashboard.html
+++ b/dashboard.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap"rel="stylesheet"/>
 
-    <link rel="stylesheet" href="css/user.css" />
-    <title>ChatGPT</title>
+    <link rel="stylesheet" href="css/dashboard.css" />
+    <title>Dashboard</title>
   </head>
   <body>
     <div class="left-box d-flex justify-content-between flex-column">
@@ -70,8 +70,10 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <h1 class="text-center mt-5 mb-5">ChatGPT</h1>
-                
+                <h1 class="mt-3 mb-5">Upload Data From Here!</h1>
+                <form class="upload-form">
+                    <input type="text">
+                </form>
             <div class="col-md-2"></div>
         </div>
     </div>
