Dashboard page - dashboard.php - Data store in databse successfully.

--- a/dashboard.html
+++ b/dashboard.html
@@ -72,8 +72,8 @@
             <div class="col-md-8">
                 <h1 class="mt-3 mb-4">Upload Data From Here!</h1>
                 <form class="upload-form">
-                    <input type="text" name="question" class="form-control mb-3 shadow-sm" required placeholder="Enter Question Here">
-                    <textarea name="answer" id="" cols="30" rows="10" class="form-control mb-3 shadow-sm" required placeholder="Write the Answer!"></textarea>
+                    <input type="text" name="question" id="question" class="form-control mb-3 shadow-sm" required placeholder="Enter Question Here">
+                    <textarea name="answer" id="answer" cols="30" rows="10" class="form-control mb-3 shadow-sm" required placeholder="Write the Answer!"></textarea>
                     <button class="btn btn-primary w-100" type="submit">Store Question</button>
                 </form>
             <div class="col-md-2"></div>
