ChatGpt page- user.html - code for data showing from database - code processing...

--- a/user.html
+++ b/user.html
@@ -123,6 +123,14 @@
                     </div>
                 </div>
 
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="row">
+                      .col-md
+                    </div>
+                  </div>
+                </div>
+
                 <div class="row mb-3">
                     <div class="col-md-12 icon-area position-relative">
                         <input type="text" class="form-control shadow-sm ">
