--- a/user.html
+++ b/user.html
@@ -125,8 +125,12 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <div class="row">
-                      .col-md
+                    <div class="row border-bottom">
+                      <div class="col-md-12">
+                        <div class="icon-area">
+                          
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
