ChatGpt page- user.html - Answer box code....

--- a/user.html
+++ b/user.html
@@ -123,13 +123,14 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row answer-box mt-3">
                   <div class="col-md-12">
-                    <div class="row border-bottom">
-                      <div class="col-md-12">
+                    <div class="row border-bottom mb-3">
+                      <div class="d-flex align-items-center col-md-12">
                         <div class="icon-area">
-                          
+                          <span>G</span>
                         </div>
+                        &nbsp;&nbsp;&nbsp;&nbsp; <span>Write a code for sum of Two numbers.</span>
                       </div>
                     </div>
                   </div>
