ChatGpt page- user.html - Answer box code- css cusomization processing...

--- a/user.html
+++ b/user.html
@@ -123,12 +123,12 @@
                     </div>
                 </div>
 
-                <div class="row answer-box mt-3">
+                <div class="row border-bottom answer-box mt-3">
                   <div class="col-md-12">
-                    <div class="row border-bottom mb-3">
+                    <div class="row mb-3">
                       <div class="d-flex align-items-center col-md-12">
                         <div class="icon-area">
-                          <span>G</span>
+                          <small>G</small>
                         </div>
                         &nbsp;&nbsp;&nbsp;&nbsp; <span>Write a code for sum of Two numbers.</span>
                       </div>
