--- a/user.html
+++ b/user.html
@@ -123,14 +123,22 @@
                     </div>
                 </div>
 
-                <div class="row border-bottom answer-box mt-3">
+                <div class="row answer-box mt-3">
                   <div class="col-md-12">
-                    <div class="row mb-3">
-                      <div class="d-flex align-items-center col-md-12">
+                    <div class="row mb-3 border-bottom py-3">
+                      <div class="col-md-12 d-flex align-items-center ">
                         <div class="icon-area">
                           <small>G</small>
                         </div>
-                        &nbsp;&nbsp;&nbsp;&nbsp; <span>Write a code for sum of Two numbers.</span>
+                        &nbsp;&nbsp;&nbsp;&nbsp; <span class="question">Write a code for sum of Two numbers.</span>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-1">
+                        <img src="Images/1600px-OpenAI_logo.png" width="70" alt="">
+                      </div>
+                      <div class="col-md-11">
+                        hjgbvshyb
                       </div>
                     </div>
                   </div>
