--- a/user.html
+++ b/user.html
@@ -128,9 +128,9 @@
                     <div class="row mb-3 border-bottom py-3">
                       <div class="col-md-12 d-flex align-items-center ">
                         <div class="icon-area">
-                          <small>G</small>
+                          <small>5</small>
                         </div>
-                        &nbsp;&nbsp;&nbsp;&nbsp; <span class="question">Write a code for sum of Two numbers.</span>
+                        &nbsp;&nbsp;&nbsp; <span class="question">Write a code for sum of Two numbers.</span>
                       </div>
                     </div>
                     <div class="row">
@@ -138,7 +138,7 @@
                         <img src="Images/1600px-OpenAI_logo.png" width="70" alt="">
                       </div>
                       <div class="col-md-11">
-                        hjgbvshyb
+                        Area 
                       </div>
                     </div>
                   </div>
@@ -161,4 +161,5 @@
     </div>
     <!-- MAIN PAGE CODE END -->
   </body>
+  <script src="js/user.js"></script>
 </html>
