ChatGpt page- user.js - ajax request processing.....

--- a/user.html
+++ b/user.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="row answer-box mt-3">
+                <div class="row answer-box mt-3 d-none">
                   <div class="col-md-12">
                     <div class="row mb-3 border-bottom py-3">
                       <div class="col-md-12 d-flex align-items-center ">
@@ -147,7 +147,7 @@
                 <div class="row mb-3">
                     <div class="col-md-12 icon-area position-relative">
                         <input type="text" class="form-control shadow-sm ">
-                        <i class="fa-regular fa-paper-plane send-btn"></i>
+                        <i class="fa-regular fa-paper-plane send-btn search-btn"></i>
                     </div>
                 </div>
                 
