--- a/user.html
+++ b/user.html
@@ -146,7 +146,7 @@
 
                 <div class="row mb-3">
                     <div class="col-md-12 icon-area position-relative">
-                        <input type="text" class="form-control shadow-sm ">
+                        <input type="text" class="form-control shadow-sm user-question">
                         <i class="fa-regular fa-paper-plane send-btn search-btn"></i>
                     </div>
                 </div>
