--- a/user.html
+++ b/user.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="row answer-box mt-3 d-none">
+                <div class="row answer-box mt-3">
                   <div class="col-md-12">
                     <div class="row mb-3 border-bottom py-3">
                       <div class="col-md-12 d-flex align-items-center ">
@@ -137,8 +137,8 @@
                       <div class="col-md-1">
                         <img src="Images/1600px-OpenAI_logo.png" width="70" alt="">
                       </div>
-                      <div class="col-md-11">
-                        Area 
+                      <div class="col-md-11 answer">
+                         
                       </div>
                     </div>
                   </div>
