--- a/user.html
+++ b/user.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="row answer-box mt-3">
+                <div class="row answer-box mt-3 d-none">
                   <div class="col-md-12">
                     <div class="row mb-3 border-bottom py-3">
                       <div class="col-md-12 d-flex align-items-center ">
