--- a/user.html
+++ b/user.html
@@ -72,7 +72,8 @@
             <div class="col-md-8">
                 <h1 class="text-center mt-5 mb-5">ChatGPT</h1>
                 
-                <div class="row mb-3">
+                <div class="gpt-box">
+                  <div class="row mb-3">
                     <div class="col-md-4 d-flex justify-content-center align-items-center flex-column">
                         <i class="fa-regular fa-sun mb-3"></i>
                         <h5>Example</h5>
@@ -121,6 +122,7 @@
                     <div class="col-md-4 text-box">
                         <p>Limited knowledge of world and events after 2021</p>
                     </div>
+                </div>
                 </div>
 
                 <div class="row answer-box mt-3 d-none">
